@@ -57,7 +57,8 @@ gdb_test_multiple "if 0\nend" $message {
 # bodies and hopefully the memory with be dirty and the problem
 # will show itself (this works at time of writing).
 
-gdb_test "if 1\necho true\\n\nelse\necho false\\n\nend" "true" ""
+gdb_test "if 1\necho true\\n\nelse\necho false\\n\nend" "true" \
+	 "if true else false #1"
 
 #    with true condition
 set message "if 1 .. else with empty body"
@@ -71,7 +72,8 @@ gdb_test_multiple "if 1\nelse\nend" $message {
 }
 
 # dirty memory
-gdb_test "if 1\necho true\\n\nelse\necho false\\n\nend" "true" ""
+gdb_test "if 1\necho true\\n\nelse\necho false\\n\nend" "true" \
+	 "if true else false #2"
 
 #    with false condition
 set message "if 0 .. else with empty body"
@@ -89,7 +91,8 @@ gdb_test_no_output "set confirm off" ""
 # Test that a define with an empty else can be replaced.
 # If there is memory corruption then free will fail.
 # dirty memory
-gdb_test "if 1\necho true\\n\nelse\necho false\\n\nend" "true" ""
+gdb_test "if 1\necho true\\n\nelse\necho false\\n\nend" "true" \
+	 "if true else false #3"
 # create
 gdb_test "define abc\nif 1\nelse\nend\nend" "" "create define with empty else"
 # call (note that condition is 1 so should pass)
