@@ -597,6 +597,10 @@ proc gdb_test_multiple { command message user_code } {
 	error "Invalid trailing newline in \"$message\" test"
     }
 
+    if [string match "*\[\r\n\]*" $message] {
+	error "Invalid newline in \"$message\" test"
+    }
+
     # TCL/EXPECT WART ALERT
     # Expect does something very strange when it receives a single braced
     # argument.  It splits it along word separators and performs substitutions.
